--- a/AZDORestApiExplorer.csproj
+++ b/AZDORestApiExplorer.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>AZDORestApiExplorer</RootNamespace>
     <AssemblyName>AZDORestApiExplorer</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -51,9 +51,6 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="VNC.Core">
-      <HintPath>..\..\vnc\Common\VNC.Core.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -76,6 +73,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Common.cs" />
     <Compile Include="Core\ApplicationCommands.cs" />
     <Compile Include="Core\Events\AfterCatSavedEvent.cs" />
     <Compile Include="Core\Events\AfterCatSavedEventArgs.cs" />
@@ -152,6 +150,12 @@
     </PackageReference>
     <PackageReference Include="Prism.Unity">
       <Version>7.2.0.1422</Version>
+    </PackageReference>
+    <PackageReference Include="VNC.Core">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="VNC.Logging">
+      <Version>1.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
