--- a/App.config
+++ b/App.config
@@ -2,19 +2,16 @@
 <configuration>
   <configSections>
 
-    <section name="entityFramework"
-      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, 
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, 
              EntityFramework, 
              Version=6.0.0.0, 
              Culture=neutral, 
-             PublicKeyToken=b77a5c561934e089"
-             requirePermission="false"/>
-    <section name="loggingConfiguration"
-      type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, 
+             PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, 
   		  Microsoft.Practices.EnterpriseLibrary.Logging, 
   		  Version=6.0.0.0, 
   		  Culture=neutral, 
-  		  PublicKeyToken=31bf3856ad364e35" />    
+  		  PublicKeyToken=31bf3856ad364e35"/>    
   </configSections>
   
   <connectionStrings>
@@ -30,71 +27,60 @@
   </connectionStrings>
   
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
 
-  <loggingConfiguration name="Logging Application Block"
-    tracingEnabled="true"
-    defaultCategory="General"
-    logWarningsWhenNoCategoriesMatch="true">
+  <loggingConfiguration name="Logging Application Block" 
+                        tracingEnabled="true" 
+                        defaultCategory="General" 
+                        logWarningsWhenNoCategoriesMatch="true">
     <listeners>
-      <add
-        name="FlatFile TraceListener"
-        fileName="C:\temp\logs\VNCExplore_FriendOrganizer.log"
-        header="" footer=""
-        formatter="FlatFile Formatter"
-        listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, 
+      <add name="FlatFile TraceListener" 
+           fileName="C:\temp\logs\AZDORestApiExplorer.log" 
+           header="" footer="" 
+           formatter="FlatFile Formatter" 
+           listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, 
   			    Microsoft.Practices.EnterpriseLibrary.Logging, 
   			    Version=6.0.0.0, 
   			    Culture=neutral, 
-  			    PublicKeyToken=31bf3856ad364e35"
-        traceOutputOptions="None"
-        type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, 
+  			    PublicKeyToken=31bf3856ad364e35" 
+           traceOutputOptions="None" 
+           type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, 
   			    Microsoft.Practices.EnterpriseLibrary.Logging, 
   			    Version=6.0.0.0, 
   			    Culture=neutral, 
-  			    PublicKeyToken=31bf3856ad364e35" />
-      <add
-        name="Formatted EventLog TraceListener"
-        source="Enterprise Library Logging"
-        formatter="Text Formatter"
-        log="Application"
-        machineName=""
-        listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, 
+  			    PublicKeyToken=31bf3856ad364e35"/>
+      <add name="Formatted EventLog TraceListener" 
+           source="Enterprise Library Logging" 
+           formatter="Text Formatter" 
+           log="Application" 
+           machineName="" 
+           listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, 
   			    Microsoft.Practices.EnterpriseLibrary.Logging, 
   			    Version=6.0.0.0, 
   			    Culture=neutral, 
-  			    PublicKeyToken=31bf3856ad364e35"
-        traceOutputOptions="None"
-        type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, 
+  			    PublicKeyToken=31bf3856ad364e35" 
+           traceOutputOptions="None" 
+           type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, 
   			    Microsoft.Practices.EnterpriseLibrary.Logging, 
   			    Version=6.0.0.0, 
   			    Culture=neutral, 
-  			    PublicKeyToken=31bf3856ad364e35" />
+  			    PublicKeyToken=31bf3856ad364e35"/>
     </listeners>
     <formatters>
-      <add
-        name="ErrorLog Formatter"
-        template="Timestamp: {timestamp} Message:{keyvalue(Class Name)}.{keyvalue(Method Name)} &gt;  {message} Category: {category} Priority: {priority} Severity: {severity} Process: {processName} - {processId} Thread: {threadName} - {win32ThreadId} User:{keyvalue(User Name)} Title:{title} EventId: {eventid} Machine: {machine} Application Domain: {appDomain} Extended Properties: {dictionary({key} - {value} )}"
-        type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      <add
-        name="FlatFile Formatter"
-        template="{timestamp(local)}|{category}|{priority}|{severity}|{processName}|{processId}|{threadName}|{win32ThreadId}|{keyvalue(User Name)}|{keyvalue(Class Name)}.{keyvalue(Method Name)}|{keyvalue(Duration)}|{message}"
-        type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      <add
-        name="Text Formatter"
-        template="Timestamp: {timestamp} Message: {message} Category: {category} Priority: {priority} EventId: {eventid} Severity: {severity} Title:{title} Machine: {machine} Application Domain: {appDomain} Process Id: {processId} Process Name: {processName} Win32 Thread Id: {win32ThreadId} Thread Name: {threadName} Extended Properties: {dictionary({key} - {value} )}"
-        type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <add name="ErrorLog Formatter" template="Timestamp: {timestamp} Message:{keyvalue(Class Name)}.{keyvalue(Method Name)} &gt;  {message} Category: {category} Priority: {priority} Severity: {severity} Process: {processName} - {processId} Thread: {threadName} - {win32ThreadId} User:{keyvalue(User Name)} Title:{title} EventId: {eventid} Machine: {machine} Application Domain: {appDomain} Extended Properties: {dictionary({key} - {value} )}" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      <add name="FlatFile Formatter" template="{timestamp(local)}|{category}|{priority}|{severity}|{processName}|{processId}|{threadName}|{win32ThreadId}|{keyvalue(User Name)}|{keyvalue(Class Name)}.{keyvalue(Method Name)}|{keyvalue(Duration)}|{message}" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      <add name="Text Formatter" template="Timestamp: {timestamp} Message: {message} Category: {category} Priority: {priority} EventId: {eventid} Severity: {severity} Title:{title} Machine: {machine} Application Domain: {appDomain} Process Id: {processId} Process Name: {processName} Win32 Thread Id: {win32ThreadId} Thread Name: {threadName} Extended Properties: {dictionary({key} - {value} )}" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
     </formatters>
     <categorySources>
       <add switchValue="All" name="General">
         <listeners>
-          <add name="FlatFile TraceListener" />
+          <add name="FlatFile TraceListener"/>
         </listeners>
       </add>
       <add switchValue="All" name="AZDORestApiExplorer">
         <listeners>
-          <add name="FlatFile TraceListener" />
+          <add name="FlatFile TraceListener"/>
         </listeners>
       </add>
       <!--<add switchValue="All" name="APPLICATION_DataAccess">
@@ -114,15 +100,15 @@
       </add>-->
     </categorySources>
     <specialSources>
-      <allEvents switchValue="All" name="All Events" />
+      <allEvents switchValue="All" name="All Events"/>
       <notProcessed switchValue="All" name="Unprocessed Category">
         <listeners>
-          <add name="Formatted EventLog TraceListener" />
+          <add name="Formatted EventLog TraceListener"/>
         </listeners>
       </notProcessed>
       <errors switchValue="All" name="Logging Errors &amp; Warnings">
         <listeners>
-          <add name="Formatted EventLog TraceListener" />
+          <add name="Formatted EventLog TraceListener"/>
         </listeners>
       </errors>
     </specialSources>
