RestAPI completely converted.  All future work will be in AZDORestAIExplorer

--- a/AZDORestApiExplorer.csproj
+++ b/AZDORestApiExplorer.csproj
@@ -14,6 +14,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove=".editorconfig" />
+    <None Remove=".gitattributes" />
+    <None Remove=".gitignore" />
+  </ItemGroup>
   
   <ItemGroup>
    <PackageReference Include="DevExpress.Wpf.Core" Version="19.2.6" />
