Moved Interface folders into REST API Category Folders Will enable pulling out into Module

--- a/AZDORestApiExplorer/AZDORestApiExplorer.csproj
+++ b/AZDORestApiExplorer/AZDORestApiExplorer.csproj
@@ -88,142 +88,71 @@
     <Folder Include="Presentation\ModelWrappers\WorkItemTrackingProcess\" />
     <Folder Include="Presentation\ModelWrappers\WorkItemTracking\" />
     <Folder Include="Presentation\ModelWrappers\Work\" />
-    <Folder Include="Presentation\ViewModels\ArtifactsPackageTypes\" />
-    <Folder Include="Presentation\ViewModels\Artifacts\" />
-    <Folder Include="Presentation\ViewModels\Audit\" />
-    <Folder Include="Presentation\ViewModels\Build\" />
-    <Folder Include="Presentation\ViewModels\Core\" />
-    <Folder Include="Presentation\ViewModels\Dashbard\" />
-    <Folder Include="Presentation\ViewModels\DistributedTask\" />
-    <Folder Include="Presentation\ViewModels\ExtenstionManagement\" />
-    <Folder Include="Presentation\ViewModels\Git\" />
-    <Folder Include="Presentation\ViewModels\Graph\" />
-    <Folder Include="Presentation\ViewModels\Identities\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Accounts\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\ArtifactsPackageTypes\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Artifacts\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Audit\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Build\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Core\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Dashbard\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\DistributedTask\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\ExtenstionManagement\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Git\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Graph\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Identities\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\MemberEntitlementManagement\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Notification\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Operations\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\PermissionsReport\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Pipelines\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Policy\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Profile\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Release\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Search\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\SecurityRoles\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Security\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\ServiceEndpoint\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\ServiceHooks\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\TestPlan\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\TestResults\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Test\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Tfvc\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\TokenAdmin\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Wiki\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\WorkItemTrackingProcessTemplate\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\WorkItemTrackingProcess\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\WorkItemTracking\" />
-    <Folder Include="Presentation\ViewModels\Interfaces\Work\" />
-    <Folder Include="Presentation\ViewModels\MemberEntitlementManagement\" />
-    <Folder Include="Presentation\ViewModels\Notification\" />
-    <Folder Include="Presentation\ViewModels\Operations\" />
-    <Folder Include="Presentation\ViewModels\PermissionsReport\" />
-    <Folder Include="Presentation\ViewModels\Pipelines\" />
-    <Folder Include="Presentation\ViewModels\Policy\" />
-    <Folder Include="Presentation\ViewModels\Profile\" />
-    <Folder Include="Presentation\ViewModels\Release\" />
-    <Folder Include="Presentation\ViewModels\Search\" />
-    <Folder Include="Presentation\ViewModels\SecurityRoles\" />
-    <Folder Include="Presentation\ViewModels\Security\" />
-    <Folder Include="Presentation\ViewModels\ServiceEndpoint\" />
-    <Folder Include="Presentation\ViewModels\ServiceHooks\" />
-    <Folder Include="Presentation\ViewModels\TestPlan\" />
-    <Folder Include="Presentation\ViewModels\TestResults\" />
-    <Folder Include="Presentation\ViewModels\Test\" />
-    <Folder Include="Presentation\ViewModels\Tfvc\" />
-    <Folder Include="Presentation\ViewModels\TokenAdmin\" />
-    <Folder Include="Presentation\ViewModels\Wiki\" />
-    <Folder Include="Presentation\ViewModels\WorkItemTrackingProcessTemplate\" />
-    <Folder Include="Presentation\ViewModels\WorkItemTrackingProcess\" />
-    <Folder Include="Presentation\ViewModels\WorkItemTracking\" />
-    <Folder Include="Presentation\ViewModels\Work\" />
-    <Folder Include="Presentation\Views\ArtifactsPackageTypes\" />
-    <Folder Include="Presentation\Views\Core\" />
-    <Folder Include="Presentation\Views\Artifacts\" />
-    <Folder Include="Presentation\Views\Audit\" />
-    <Folder Include="Presentation\Views\Build\" />
-    <Folder Include="Presentation\Views\Git\" />
-    <Folder Include="Presentation\Views\Graph\" />
-    <Folder Include="Presentation\Views\Identities\" />
-    <Folder Include="Presentation\Views\Interfaces\Accounts\" />
-    <Folder Include="Presentation\Views\Interfaces\Artifacts\" />
-    <Folder Include="Presentation\Views\Interfaces\Audit\" />
-    <Folder Include="Presentation\Views\Interfaces\Build\" />
-    <Folder Include="Presentation\Views\Interfaces\Core\" />
-    <Folder Include="Presentation\Views\Interfaces\Dashbard\" />
-    <Folder Include="Presentation\Views\Interfaces\DistributedTask\" />
-    <Folder Include="Presentation\Views\Interfaces\ExtenstionManagement\" />
-    <Folder Include="Presentation\Views\Interfaces\Git\" />
-    <Folder Include="Presentation\Views\Interfaces\Graph\" />
-    <Folder Include="Presentation\Views\Interfaces\Identities\" />
-    <Folder Include="Presentation\Views\Interfaces\MemberEntitlementManagement\" />
-    <Folder Include="Presentation\Views\Interfaces\ArtifactsPackageTypes\" />
-    <Folder Include="Presentation\Views\Interfaces\PermissionsReport\" />
-    <Folder Include="Presentation\Views\Interfaces\Operations\" />
-    <Folder Include="Presentation\Views\Interfaces\WorkItemTrackingProcessTemplate\" />
-    <Folder Include="Presentation\Views\Interfaces\WorkItemTrackingProcess\" />
-    <Folder Include="Presentation\Views\Interfaces\WorkItemTracking\" />
-    <Folder Include="Presentation\Views\Interfaces\Work\" />
-    <Folder Include="Presentation\Views\Interfaces\Wiki\" />
-    <Folder Include="Presentation\Views\Interfaces\TokenAdmin\" />
-    <Folder Include="Presentation\Views\Interfaces\Tfvc\" />
-    <Folder Include="Presentation\Views\Interfaces\TestResults\" />
-    <Folder Include="Presentation\Views\Interfaces\TestPlan\" />
-    <Folder Include="Presentation\Views\Interfaces\Test\" />
-    <Folder Include="Presentation\Views\Interfaces\ServiceHooks\" />
-    <Folder Include="Presentation\Views\Interfaces\ServiceEndpoint\" />
-    <Folder Include="Presentation\Views\Interfaces\SecurityRoles\" />
-    <Folder Include="Presentation\Views\Interfaces\Security\" />
-    <Folder Include="Presentation\Views\Interfaces\Search\" />
-    <Folder Include="Presentation\Views\Interfaces\Release\" />
-    <Folder Include="Presentation\Views\Interfaces\Profile\" />
-    <Folder Include="Presentation\Views\Interfaces\Policy\" />
-    <Folder Include="Presentation\Views\Interfaces\Pipelines\" />
-    <Folder Include="Presentation\Views\Interfaces\Notification\" />
-    <Folder Include="Presentation\Views\MemberEntitlementManagement\" />
-    <Folder Include="Presentation\Views\DistributedTask\" />
-    <Folder Include="Presentation\Views\ExtenstionManagement\" />
-    <Folder Include="Presentation\Views\Operations\" />
-    <Folder Include="Presentation\Views\PermissionsReport\" />
-    <Folder Include="Presentation\Views\ServiceHooks\" />
-    <Folder Include="Presentation\Views\ServiceEndpoint\" />
-    <Folder Include="Presentation\Views\SecurityRoles\" />
-    <Folder Include="Presentation\Views\Security\" />
-    <Folder Include="Presentation\Views\Policy\" />
-    <Folder Include="Presentation\Views\Profile\" />
-    <Folder Include="Presentation\Views\Search\" />
-    <Folder Include="Presentation\Views\Wiki\" />
-    <Folder Include="Presentation\Views\TokenAdmin\" />
-    <Folder Include="Presentation\Views\Tfvc\" />
-    <Folder Include="Presentation\Views\TestResults\" />
-    <Folder Include="Presentation\Views\TestPlan\" />
-    <Folder Include="Presentation\Views\Test\" />
-    <Folder Include="Presentation\Views\Release\" />
-    <Folder Include="Presentation\Views\Pipelines\" />
-    <Folder Include="Presentation\Views\Notification\" />
-    <Folder Include="Presentation\Views\WorkItemTrackingProcess\" />
-    <Folder Include="Presentation\Views\WorkItemTracking\" />
-    <Folder Include="Presentation\Views\Work\" />
+    <Folder Include="Presentation\ViewModels\ArtifactsPackageTypes\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Artifacts\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Audit\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Build\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Core\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\DistributedTask\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\ExtenstionManagement\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Git\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Graph\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Identities\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\MemberEntitlementManagement\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Notification\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Operations\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\PermissionsReport\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Pipelines\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Policy\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Profile\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Release\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Search\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\SecurityRoles\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Security\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\ServiceEndpoint\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\ServiceHooks\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\TestPlan\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\TestResults\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Test\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Tfvc\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\TokenAdmin\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Wiki\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\WorkItemTrackingProcessTemplate\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\WorkItemTrackingProcess\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\WorkItemTracking\Interfaces\" />
+    <Folder Include="Presentation\ViewModels\Work\Interfaces\" />
+    <Folder Include="Presentation\Views\ArtifactsPackageTypes\Interfaces\" />
+    <Folder Include="Presentation\Views\Artifacts\Interfaces\" />
+    <Folder Include="Presentation\Views\Audit\Interfaces\" />
+    <Folder Include="Presentation\Views\Build\Interfaces\" />
+    <Folder Include="Presentation\Views\Core\Interfaces\" />
+    <Folder Include="Presentation\Views\DistributedTask\Interfaces\" />
+    <Folder Include="Presentation\Views\ExtenstionManagement\Interfaces\" />
+    <Folder Include="Presentation\Views\Git\Interfaces\" />
+    <Folder Include="Presentation\Views\Graph\Interfaces\" />
+    <Folder Include="Presentation\Views\Identities\Interfaces\" />
+    <Folder Include="Presentation\Views\MemberEntitlementManagement\Interfaces\" />
+    <Folder Include="Presentation\Views\Notification\Interfaces\" />
+    <Folder Include="Presentation\Views\Operations\Interfaces\" />
+    <Folder Include="Presentation\Views\PermissionsReport\Interfaces\" />
+    <Folder Include="Presentation\Views\Pipelines\Interfaces\" />
+    <Folder Include="Presentation\Views\Policy\Interfaces\" />
+    <Folder Include="Presentation\Views\Profile\Interfaces\" />
+    <Folder Include="Presentation\Views\Release\Interfaces\" />
+    <Folder Include="Presentation\Views\Search\Interfaces\" />
+    <Folder Include="Presentation\Views\SecurityRoles\Interfaces\" />
+    <Folder Include="Presentation\Views\Security\Interfaces\" />
+    <Folder Include="Presentation\Views\ServiceEndpoint\Interfaces\" />
+    <Folder Include="Presentation\Views\ServiceHooks\Interfaces\" />
+    <Folder Include="Presentation\Views\TestPlan\Interfaces\" />
+    <Folder Include="Presentation\Views\TestResults\Interfaces\" />
+    <Folder Include="Presentation\Views\Test\Interfaces\" />
+    <Folder Include="Presentation\Views\Tfvc\Interfaces\" />
+    <Folder Include="Presentation\Views\TokenAdmin\Interfaces\" />
+    <Folder Include="Presentation\Views\Wiki\Interfaces\" />
+    <Folder Include="Presentation\Views\WorkItemTrackingProcess\Interfaces\" />
+    <Folder Include="Presentation\Views\WorkItemTracking\Interfaces\" />
+    <Folder Include="Presentation\Views\Work\Interfaces\" />
   </ItemGroup>
 
 </Project>
