--- a/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
+++ b/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
@@ -18,7 +18,6 @@
     <Folder Include="Artifacts\" />
     <Folder Include="Audit\" />
     <Folder Include="Build\" />
-    <Folder Include="Dashbard\" />
     <Folder Include="DistributedTask\" />
     <Folder Include="ExtenstionManagement\" />
     <Folder Include="Git\" />
