Getting ready to start added stuff.  Stuff mostly moved out of AZDORestApiExplorer

--- a/AZDORestApiExplorer.Dashboard/AZDORestApiExplorer.Dashboard.csproj
+++ b/AZDORestApiExplorer.Dashboard/AZDORestApiExplorer.Dashboard.csproj
@@ -36,6 +36,9 @@
       <Page Update="Presentation\Views\DashboardMain.xaml">
         <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       </Page>
+      <Page Update="Presentation\Views\WidgetMain.xaml">
+        <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      </Page>
     </ItemGroup>
     
 </Project>
