Updated to at least get to compile again.

--- a/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
+++ b/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="VNC.CoreNF" Version="1.0.0" />
+    <PackageReference Include="VNC.Core" Version="1.0.0" />
   </ItemGroup>
 
     <ItemGroup>
