--- a/AZDORestApiExplorer/App.config
+++ b/AZDORestApiExplorer/App.config
@@ -78,7 +78,7 @@
             <add
                 name="SignalRListener"
                 type="VNC.Logging.TraceListeners.SignalRListener,
-                       VNC.LoggingNF, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6621de8a79b51ca3"
+                       VNC.Logging, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6621de8a79b51ca3"
                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData,
                     Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
                 formatter="LiveView Formatter" />
