--- a/AZDORestApiExplorer.Audit/AZDORestApiExplorer.Audit.csproj
+++ b/AZDORestApiExplorer.Audit/AZDORestApiExplorer.Audit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
     <PropertyGroup>
-        <TargetFramework>net4.8</TargetFramework>
+        <TargetFramework>net48</TargetFramework>
         <UseWPF>true</UseWPF>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
@@ -18,15 +18,15 @@
         <PackageReference Include="DevExpress.Wpf.Grid" Version="19.2.6" />
         <PackageReference Include="DevExpress.Wpf.Layout" Version="19.2.6" />
         <PackageReference Include="DevExpress.Wpf.Navigation" Version="19.2.6" />
-        <PackageReference Include="Prism.Unity" Version="7.2.0.1422" />
-        <PackageReference Include="VNC.CoreNF" Version="1.0.0" />
+        <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
+        <PackageReference Include="VNC.Core" Version="1.0.0" />
         <PackageReference Include="VNC.HttpHelper" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\AZDORestApiExplorer.Core\AZDORestApiExplorer.Core.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Domain\AZDORestApiExplorer.Domain.csproj" />
-        <!--<ProjectReference Include="..\..\vnc\VNC.Core\VNC.CoreNF.csproj" />-->        
+        <!--<ProjectReference Include="..\..\vnc\VNC.Core\VNC.Core.csproj" />-->        
     </ItemGroup>
 
     <ItemGroup>
