--- a/AZDORestApiExplorer.Wiki/AZDORestApiExplorer.Wiki.csproj
+++ b/AZDORestApiExplorer.Wiki/AZDORestApiExplorer.Wiki.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
     <PropertyGroup>
-        <TargetFramework>net4.8</TargetFramework>
+        <TargetFramework>net48</TargetFramework>
         <UseWPF>true</UseWPF>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
@@ -18,7 +18,7 @@
         <PackageReference Include="DevExpress.Wpf.Grid" Version="19.2.6" />
         <PackageReference Include="DevExpress.Wpf.Layout" Version="19.2.6" />
         <PackageReference Include="DevExpress.Wpf.Navigation" Version="19.2.6" />
-        <PackageReference Include="VNC.CoreNF" Version="1.0.0" />
+        <PackageReference Include="VNC.Core" Version="1.0.0" />
         <PackageReference Include="VNC.HttpHelper" Version="1.0.0" />
     </ItemGroup>
 
