--- a/AZDORestApiExplorer/AZDORestApiExplorer.csproj
+++ b/AZDORestApiExplorer/AZDORestApiExplorer.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net4.8</TargetFramework>
+        <TargetFramework>net48</TargetFramework>
         <UseWPF>true</UseWPF>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
@@ -174,13 +174,13 @@
         <PackageReference Include="DevExpress.Wpf.Layout" Version="19.2.6" />
         <PackageReference Include="DevExpress.Wpf.Navigation" Version="19.2.6" />
         <PackageReference Include="EntityFramework" Version="6.4.4" />
-        <PackageReference Include="Prism.Unity" Version="7.2.0.1422" />
-        <PackageReference Include="VNC.CoreNF" Version="1.0.0" />
+        <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
+        <PackageReference Include="VNC.Core" Version="1.0.0" />
         <PackageReference Include="VNC.HttpHelper" Version="1.0.0" />
+        <PackageReference Include="VNC.WPF.Presentation.Dx" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\vnc\VNC.WPF.Presentation.Dx\VNC.WPF.Presentation.DxNF.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Accounts\AZDORestApiExplorer.Accounts.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Artifacts\AZDORestApiExplorer.Artifacts.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Audit\AZDORestApiExplorer.Audit.csproj" />
