--- a/AZDORestApiExplorer/AZDORestApiExplorer.csproj
+++ b/AZDORestApiExplorer/AZDORestApiExplorer.csproj
@@ -180,10 +180,10 @@
         <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
         <PackageReference Include="VNC.Core" Version="1.1.0" />
         <PackageReference Include="VNC.HttpHelper" Version="1.0.0" />
-        <PackageReference Include="VNC.WPF.Presentation.Dx" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\VNC\VNC.WPF.Presentation.Dx\VNC.WPF.Presentation.Dx.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Accounts\AZDORestApiExplorer.Accounts.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Artifacts\AZDORestApiExplorer.Artifacts.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Audit\AZDORestApiExplorer.Audit.csproj" />
