--- a/AZDORestApiExplorer.Artifacts/AZDORestApiExplorer.Artifacts.csproj
+++ b/AZDORestApiExplorer.Artifacts/AZDORestApiExplorer.Artifacts.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net48</TargetFramework>
+        <TargetFrameworks>net5.0-windows;net48</TargetFrameworks>
         <UseWPF>true</UseWPF>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
@@ -20,7 +20,7 @@
         <PackageReference Include="DevExpress.Wpf.Navigation" Version="19.2.6" />
         <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
         <PackageReference Include="VNC.Core" Version="1.1.0" />
-        <PackageReference Include="VNC.HttpHelper" Version="1.0.0" />
+        <PackageReference Include="VNC.HttpHelper" Version="1.1.0" />
     </ItemGroup>
 
     <ItemGroup>
