--- a/AZDORestApiExplorer/AZDORestApiExplorer.csproj
+++ b/AZDORestApiExplorer/AZDORestApiExplorer.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net48</TargetFramework>
+        <TargetFrameworks>net5.0-windows;net48</TargetFrameworks>
         <UseWPF>true</UseWPF>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <ApplicationIcon>Resources\Icons\application.ico</ApplicationIcon>
@@ -170,23 +170,23 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DevExpress.Wpf.Core" Version="19.2.6" />
-        <PackageReference Include="DevExpress.Wpf.Grid" Version="19.2.6" />
-        <PackageReference Include="DevExpress.Wpf.Layout" Version="19.2.6" />
-        <PackageReference Include="DevExpress.Wpf.Navigation" Version="19.2.6" />
+        <PackageReference Include="DevExpress.Wpf.Core" Version="21.1.4" />
+        <PackageReference Include="DevExpress.Wpf.Core.Extensions" Version="21.1.4" />
+        <PackageReference Include="DevExpress.Wpf.Docking" Version="21.1.4" />
+        <PackageReference Include="DevExpress.Wpf.Grid" Version="21.1.4" />
+        <PackageReference Include="DevExpress.Wpf.NavBar" Version="21.1.4" />
+        <PackageReference Include="DevExpress.Wpf.Ribbon" Version="21.1.4" />
         <PackageReference Include="EntityFramework" Version="6.4.4" />
         <PackageReference Include="Microsoft.VisualStudio.Services.Client" Version="16.170.0" />
         <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient" Version="16.170.0" />
-        <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
+        <PackageReference Include="Prism.Unity" Version="8.1.97" />
         <PackageReference Include="VNC.Core" Version="1.1.0" />
-        <PackageReference Include="VNC.HttpHelper" Version="1.0.0" />
+        <PackageReference Include="VNC.HttpHelper" Version="1.1.0" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\VNC\VNC.WPF.Presentation.Dx\VNC.WPF.Presentation.Dx.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Accounts\AZDORestApiExplorer.Accounts.csproj" />
-        <ProjectReference Include="..\AZDORestApiExplorer.Artifacts\AZDORestApiExplorer.Artifacts.csproj" />
-        <ProjectReference Include="..\AZDORestApiExplorer.Audit\AZDORestApiExplorer.Audit.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Core\AZDORestApiExplorer.Core.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Dashboard\AZDORestApiExplorer.Dashboard.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Domain\AZDORestApiExplorer.Domain.csproj" />
