First step toward a common ViewModel for basic grid of items

--- a/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
+++ b/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
@@ -52,4 +52,8 @@
     <Folder Include="Work\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\vnc\VNC.HttpHelper\VNC.HttpHelper.csproj" />
+  </ItemGroup>
+
 </Project>
