--- a/AZDORestApiExplorer.Presentation/AZDORestApiExplorer.Presentation.csproj
+++ b/AZDORestApiExplorer.Presentation/AZDORestApiExplorer.Presentation.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="DevExpress.Wpf.Core.Extensions" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Docking" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Grid" Version="21.1.4" />
+        <PackageReference Include="DevExpress.Wpf.LayoutControl" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.NavBar" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Ribbon" Version="21.1.4" />
         <PackageReference Include="VNC.Core" Version="1.1.0" />
