Making progress, but need to think through whether we really want to tackle the HTTPExhange stuff that I put in early on. If we do, then review what should go in RESTResult and what shoud go in HTTPExchangeBase and HTTPExchangeViewModelBase

--- a/AZDORestApiExplorer/App.config
+++ b/AZDORestApiExplorer/App.config
@@ -159,7 +159,28 @@
                 <add name="Rolling Flat File Trace Listener" />
             </listeners>
           </add>
-          <add switchValue="All" name="VNCCore">
+
+            <add switchValue="All" name="AZDORestApiExplorerCategory">
+                <listeners>
+                    <add name="SignalRListener" />
+                    <add name="Rolling Flat File Trace Listener" />
+                </listeners>
+            </add>            
+
+            <add switchValue="All" name="AZDORestApiExplorerCore">
+                <listeners>
+                    <add name="SignalRListener" />
+                    <add name="Rolling Flat File Trace Listener" />
+                </listeners>
+            </add>
+
+            <add switchValue="All" name="AZDORestApiExplorerDomain">
+                <listeners>
+                    <add name="SignalRListener" />
+                    <add name="Rolling Flat File Trace Listener" />
+                </listeners>
+            </add>            
+            <add switchValue="All" name="VNCCore">
             <listeners>
                 <add name="SignalRListener" />
                 <add name="Rolling Flat File Trace Listener" />
