Added another floating window in MainWindow.xaml More screwing around with WorkItemFields in TestCase.  Still not resolved.

--- a/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
+++ b/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
@@ -31,6 +31,7 @@
     <Folder Include="DistributedTask\" />
     <Folder Include="DomainServices\" />
     <Folder Include="ExtenstionManagement\" />
+    <Folder Include="Tokens\" />
     <Folder Include="TestPlan\" />
     <Folder Include="TestResults\" />
     <Folder Include="Tfvc\" />
