--- a/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
+++ b/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-      <TargetFrameworks>net5.0-windows;net48</TargetFrameworks>
+      <TargetFrameworks>net5-windows10.0.17763.0;net48</TargetFrameworks>
+      <!--<TargetFrameworks>net5.0-windows;net48</TargetFrameworks>-->
       <UseWPF>true</UseWPF>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.36.2" />
     <PackageReference Include="VNC.Core" Version="1.2.0" />
     <!--<PackageReference Include="VNC.HttpHelper" Version="1.2.0" />-->      
   </ItemGroup>
