--- a/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
+++ b/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\VNC\VNC.Core\VNC.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
         <!-- Workaround for https://github.com/dotnet/wpf/issues/2648#issuecomment-635674683 -->
         <Reference Include="System.Web" />
     </ItemGroup>
