--- a/AZDORestApiExplorer.Dashboard/AZDORestApiExplorer.Dashboard.csproj
+++ b/AZDORestApiExplorer.Dashboard/AZDORestApiExplorer.Dashboard.csproj
@@ -19,11 +19,11 @@
         <PackageReference Include="DevExpress.Wpf.NavBar" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Ribbon" Version="21.1.4" />
         <PackageReference Include="Prism.Unity" Version="8.1.97" />
-        <PackageReference Include="VNC.Core" Version="1.2.0" />
-        <!--<PackageReference Include="VNC.HttpHelper" Version="1.2.0" />-->
+        <!--<PackageReference Include="VNC.Core" Version="1.2.0" />-->
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\VNC\VNC.Core\VNC.Core.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Core\AZDORestApiExplorer.Core.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Domain\AZDORestApiExplorer.Domain.csproj" />
         <ProjectReference Include="..\AZDORestApiExplorer.Presentation\AZDORestApiExplorer.Presentation.csproj" />
