--- a/AZDORestApiExplorer.Core/AZDORestApiExplorer.Core.csproj
+++ b/AZDORestApiExplorer.Core/AZDORestApiExplorer.Core.csproj
@@ -101,5 +101,15 @@
     <Folder Include="Events\WorkItemTrackingProcessTemplate\" />
     <Folder Include="Events\WorkItemTrackingProcess\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\DependencyValidation1\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
+  </ItemGroup>
   
 </Project>
