--- a/AZDORestApiExplorer.Dashboard/AZDORestApiExplorer.Dashboard.csproj
+++ b/AZDORestApiExplorer.Dashboard/AZDORestApiExplorer.Dashboard.csproj
@@ -11,6 +11,12 @@
     <Folder Include="Presentation\ModelWrappers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="..\DependencyValidation1\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+  </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="DevExpress.Wpf.Core" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Core.Extensions" Version="21.1.4" />
@@ -18,6 +24,7 @@
         <PackageReference Include="DevExpress.Wpf.Grid" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.NavBar" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Ribbon" Version="21.1.4" />
+        <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
         <PackageReference Include="Prism.Unity" Version="8.1.97" />
         <!--<PackageReference Include="VNC.Core" Version="1.2.0" />-->
     </ItemGroup>
