--- a/AZDORestApiExplorer.Tokens/AZDORestApiExplorer.Tokens.csproj
+++ b/AZDORestApiExplorer.Tokens/AZDORestApiExplorer.Tokens.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="DevExpress.Wpf.Grid" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.NavBar" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Ribbon" Version="21.1.4" />
+        <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
         <!--<PackageReference Include="VNC.Core" Version="1.2.0" />-->
     </ItemGroup>
 
@@ -30,6 +31,12 @@
 
     <ItemGroup>
       <Folder Include="NewFolder\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AdditionalFiles Include="..\DependencyValidation1\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
+        <Visible>False</Visible>
+      </AdditionalFiles>
     </ItemGroup>
     
 </Project>
