--- a/AZDORestApiExplorer/AZDORestApiExplorer.csproj
+++ b/AZDORestApiExplorer/AZDORestApiExplorer.csproj
@@ -191,7 +191,8 @@
         <PackageReference Include="DevExpress.Wpf.Ribbon" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Themes.MetropolisDark" Version="21.1.4" />
         <PackageReference Include="DevExpress.Wpf.Themes.MetropolisLight" Version="21.1.4" />        
-        <PackageReference Include="EntityFramework" Version="6.4.4" />
+        <PackageReference Include="EntityFramework" Version="6.4.4" />        
+        <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
         <PackageReference Include="Microsoft.VisualStudio.Services.Client" Version="16.170.0" />
         <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient" Version="16.170.0" />
         <PackageReference Include="Prism.Unity" Version="8.1.97" />
@@ -284,5 +285,11 @@
 
     <ItemGroup>
       <Folder Include="Presentation\ModelWrappers\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AdditionalFiles Include="..\DependencyValidation1\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
+        <Visible>False</Visible>
+      </AdditionalFiles>
     </ItemGroup>
 </Project>
